# c-katas

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  library.h
src/: CMakeLists.txt  library.c
test/: CMakeLists.txt  library_test.c
test/+1_array/: up_array_test.c
test/beeramid/: beeramid_test.c
test/best_travel/: choose_best_sum_test.c
test/convert_isbn_10_to_isbn_13/: isbn_converter_test.c
test/count_characters_in_your_string/: count_test.c
test/count_ip_addresses/: ips_between_test.c
test/create_phone_number/: create_phone_number_test.c
test/directions_reduction/: dir_reduc_test.c
test/find_the_smallest/: smallest_test.c
test/gap_in_primes/: gap_test.c
test/greed_is_good/: score_test.c
test/help_your_granny/: tour_test.c
test/human_readable_time/: human_readable_time_test.c
test/integers_recreation_one/: listSquared_test.c
test/josephus_survivor/: josephus_survivor_test.c
test/land_perimeter/: land_perimeter_test.c
test/maximum_subarray_sum/: max_sequence_test.c
test/maze_runner/: maze_runner_test.c
test/rot13/: rot13_test.c
test/scramblies/: scramblies_test.c
test/second_variation_on_caesar_cipher/: caesar_test.c
test/simple_assembler_interpreter/: simple_assembler_test.c
test/stop_gninnips_my_sdrow/: spin_words_test.c
test/string_incrementer/: increment_string_test.c
test/the_vowel_code/: encode_decode_test.c
test/tic_tac_toe_checker/: check_game_state_test.c
test/valid_parentheses/: valid_parentheses_test.c
test/weight_for_weight/: order_weight_test.c
(+30 files in other folders)
